--- a/Resources/Private/Partials/Discussion/Components.html
+++ b/Resources/Private/Partials/Discussion/Components.html
@@ -317,7 +317,10 @@
 			<f:format.raw>{postItem.content}</f:format.raw>
 		</v:case>
 		<v:case case="markdown" break="TRUE">
-			<v:format.markdown>{postItem.content}</v:format.markdown>
+			<v:format.replace substring="<pre>" replacement="<pre class='prettyprint linenums:1'>">
+				<v:format.markdown htmlentities="{settings.markup.markdown.htmlentities}"
+				                   trim="{settings.markup.markdown.trim}">{postItem.content}</v:format.markdown>
+			</v:format.replace>
 		</v:case>
 		<v:case case="template" break="TRUE">
 			<v:render.template file="{settings.markup.template}" variables="{postItem: postItem, settings: settings}" />
