[TASK] Render full Post with markup when replying to Post
Before: block quoted simple HTML output.
Now: output using same behaviour as configured in TS and used by the DiscussionThread view.

--- a/Resources/Private/Partials/Discussion/Components.html
+++ b/Resources/Private/Partials/Discussion/Components.html
@@ -416,9 +416,7 @@
 			</f:if>
 		</h2>
 		<f:if condition="{parent}">
-			<blockquote>
-				<f:format.nl2br>{parent.content}</f:format.nl2br>
-			</blockquote>
+			<f:render section="PostItem" arguments="{postItem: parent}" />
 			<h2><f:translate key="writeReply" /></h2>
 		</f:if>
 		<f:form action="post" object="{post}" name="post" enctype="multipart/form-data">
