--- a/Resources/Public/Stylesheets/Common.css
+++ b/Resources/Public/Stylesheets/Common.css
@@ -216,3 +216,7 @@ td.latest-items-options {
 .tx-dialog-discussion h4 .new-post {
 	margin-left: 3px;
 }
+
+.tx-dialog-discussion .subscribe-button {
+	display: inline-block;
+}
