--- a/Resources/Public/Stylesheets/Common.css
+++ b/Resources/Public/Stylesheets/Common.css
@@ -119,7 +119,7 @@ td.latest-items-options {
 }
 
 .thread-last-update {
-	width: 90px;
+	white-space: nowrap;
 	text-align: right;
 	display: inline-block;
 	margin-top: 2px;
